@@ -253,6 +253,12 @@ void FrameLoaderClient::didPerformFirstNavigation() const
 {
 }
 
+void FrameLoaderClient::registerForIconNotification(bool) const 
+{ 
+    notImplemented(); 
+} 
+    
+
 void FrameLoaderClient::setMainFrameDocumentReady(bool) 
 {
     // this is only interesting once we provide an external API for the DOM
