@@ -121,6 +121,8 @@ namespace WebKit {
         virtual void windowObjectCleared() const;
         virtual void didPerformFirstNavigation() const;
 
+        virtual void registerForIconNotification(bool) const; 
+        
         virtual WebCore::ObjectContentType objectContentType(const WebCore::KURL& url, const WebCore::String& mimeType);
 
         virtual void setMainFrameDocumentReady(bool);
